--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "app-module-path": "^2.2.0",
     "async": "^3.2.1",
     "aws-sdk": "^2.960.0",
+    "axios": "^0.24.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "config": "^3.3.6",
