--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "mongoose": "^5.12.12",
+    "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
+    "multer-s3-multipart": "^2.11.0",
     "nodemon": "^2.0.14",
     "oauth2orize": "^1.11.0",
     "passport": "^0.4.1",
